Fixed cookie bar too small on wide screen

--- a/css/cookie-bar.css
+++ b/css/cookie-bar.css
@@ -18,6 +18,8 @@
 	align-items: center;
 	z-index: 21;
 	line-height: 1.5;
+	
+	width: 100%;
 }
 
 /* Grouping of buttons in the cookie bar */
